fixing overlapping text-area trying padding/ moded about

--- a/src/main/resources/static/about.css
+++ b/src/main/resources/static/about.css
@@ -1,6 +1,6 @@
 body {
     color: #444;
-    font-family: sans-serif;
+    font-family: "Inter", sans-serif;
     /*border-top: 3px solid #1098ad;*/
     text-align: center;
 }
